--- a/css/main.css
+++ b/css/main.css
@@ -29,3 +29,14 @@ img{
     background-image: url('../assets/ggb.jpg');
     background-size: cover;
 }
+#aboutBanner{
+    color: #272b30;    
+    margin-top: 15em;
+    text-align: center;   
+}
+#aboutTitle{
+    text-align: center;
+    text-shadow: 2px 2px 6px grey;
+    text-shadow: -4px, -4px, 8px, white;
+    background-color: rgba(237, 236, 236, 0.11);
+}
