--- a/css/main.css
+++ b/css/main.css
@@ -43,8 +43,17 @@
     text-shadow: -4px, -4px, 8px, white;
     background-color: rgba(237, 236, 236, 0.11);
 }
+#aboutText{
+    text-align: center;
+    color:#272b30;
+    text-shadow:1px 1px 1px black;
+    text-shadow: 2px 2px 6px grey;
+    text-shadow: -4px, -4px, 2px, white;
+    font-weight: bolder;
+    background-color: rgba(237, 236, 236, 0.31);
+}
 #projects{
-    height: 43.5em;
+    height: 47em;
     background-image: url('../assets/codeBG5.png');
     background-attachment: fixed;
 }
@@ -63,4 +72,17 @@
 .projectTitle{
     text-align: center;
 }
+#contact{
+    height: 43.5em;
+    margin-left: 0;
+    margin-right: 0;
+    background-image: url('../assets/tam.jpg');
+    background-size: cover;
+}
+#contactIcons{
+    margin-top: 20em;
+    text-align: center;
+}
+
+
 
