--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@
 }
 #projectsTitle{
     text-align: center;
-    margin-top: 70px;
+    margin-top: 60px;
 }
 .screenshot{
     opacity: 1;
@@ -83,6 +83,9 @@
     margin-top: 20em;
     text-align: center;
 }
-
+#projectCaret{
+    margin-top: 0px;
+    vertical-align: top;
+}
 
 
