--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,7 @@
     margin-left: 0;
     margin-right: 0;
     background-image: url('../assets/ggb.jpg');
+    background-attachment: fixed;
     background-size: cover;
 }
 #aboutBanner{
