--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+h5{
+    display: inline;
+    font-weight: bolder;
+    text-shadow: none;
+}
 #portrait{
     opacity: 0.65;
     margin: 2em;
@@ -87,6 +92,9 @@
 #projectCaret{
     margin-top: 0px;
     vertical-align: top;
+}
+#justifyMost{
+    font-size: 1.05em
 }
 
 
