--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,7 @@ h5{
     text-shadow: 2px 2px 6px grey;
     text-shadow: -4px, -4px, 8px, white;
     background-color: rgba(237, 236, 236, 0.11);
+    border-radius: 4px;
 }
 #aboutText{
     text-align: center;
@@ -57,6 +58,7 @@ h5{
     text-shadow: -4px, -4px, 2px, white;
     font-weight: bolder;
     background-color: rgba(237, 236, 236, 0.38);
+    border-radius: 4px;
 }
 #projects{
     height: 100vh;
@@ -94,7 +96,14 @@ h5{
     vertical-align: top;
 }
 #justifyMost{
-    font-size: 1.05em
+    font-size: 0.9em
+}
+.learner{
+    font-weight: bolder;
+    font-size: 0.91em
+}
+.highlight{
+    background-color: rgba(103, 229, 19, 0.27); 
 }
 
 
