--- a/css/main.css
+++ b/css/main.css
@@ -54,9 +54,12 @@ h5{
 #aboutText{
     text-align: center;
     color:#272b30;
+/*
     text-shadow:1px 1px 1px black;
     text-shadow: 2px 2px 6px grey;
     text-shadow: -4px, -4px, 2px, white;
+*/
+    line-height: 1.75em;
     font-weight: bolder;
     background-color: rgba(237, 236, 236, 0.38);
     border-radius: 4px;
@@ -104,7 +107,8 @@ h5{
     font-size: 0.91em
 }
 .highlight{
-    background-color: rgba(103, 229, 19, 0.27); 
+    background-color: rgba(103, 229, 19, 0.17); 
+    border-radius: 3px;
 }
 
 
