--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ h5{
     height: 100vh;
     margin-left: 0;
     margin-right: 0;
-    background-image: url('../assets/ggb.jpg');
+    background-image: url('../assets/ggb1.jpg');
     background-attachment: fixed;
     background-size: cover;
 }
@@ -71,6 +71,7 @@ h5{
 }
 #projectsTitle{
     text-align: center;
+    letter-spacing: .5em;
     margin-top: 60px;
 }
 .screenshot{
@@ -95,9 +96,11 @@ h5{
     margin-top: 20em;
     text-align: center;
 }
-#projectCaret{
+i .fa .fa-caret-down .fa-3x{
+    padding: 0;
     margin-top: 0px;
     vertical-align: top;
+    color: aqua;
 }
 #justifyMost{
 /*    font-size: 0.9em*/
@@ -108,6 +111,9 @@ h5{
 .highlight{
     background-color: rgba(103, 229, 19, 0.17); 
     border-radius: 3px;
+}
+#navcaret{
+    padding: 0;
 }
 
 
