--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,8 @@ h5{
 #name{
     font-size: 5em;
     font-family: 'Sirin Stencil', cursive;
+    letter-spacing: 0.3em;
+    word-spacing: 0.3em
 }
 #pagetop{  
     margin-top: 3.5em;
