--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,8 @@ i .fa .fa-caret-down .fa-3x{
     font-weight: bolder;
 }
 .highlight{
+    padding-left: 5px;
+    padding-right: 5px;
     background-color: rgba(103, 229, 19, 0.17); 
     border-radius: 3px;
 }
