--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ h5{
     margin-left: 0;
     margin-right: 0;
     background-image: url('../assets/ggb1.jpg');
-    background-attachment: fixed;
+/*    background-attachment: fixed;*/
     background-size: cover;
 }
 #aboutBanner{
