--- a/css/main.css
+++ b/css/main.css
@@ -142,3 +142,8 @@ i .fa .fa-caret-down .fa-3x{
 .projectText{
     font-size: 0.8em;
 }
+
+#instructions{
+    letter-spacing: 0.3em;
+    font-size: 0.5em;
+}
