--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,10 @@ h5{
     letter-spacing: .5em;
     margin-top: 60px;
 }
+
+div .col-xs-12.col-sm-4.col-lg-2.project{
+    height: 351px;
+}
 .screenshot{
     opacity: 1;
     border-radius: 5px;
