--- a/css/main.css
+++ b/css/main.css
@@ -53,8 +53,37 @@ h5{
 /*    height: 100vh;*/
     margin-left: 0;
     margin-right: 0;
-    background-image: url('../assets/sky.jpg');
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#feffff+0,d2ebf9+100;Blue+3D+%2312 */
+  background: #feffff; /* Old browsers */
+  background: -moz-linear-gradient(top,  #feffff 0%, #d2ebf9 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  #feffff 0%,#d2ebf9 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  #feffff 0%,#d2ebf9 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feffff', endColorstr='#d2ebf9',GradientType=0 ); /* IE6-9 */
+
+
+
+
+    /*background-image: url('../assets/sky.jpg');*/
     background-size: cover;
+}
+
+.artsTitles {
+  color: white;
+  margin-top: 60px;
+
+}
+
+#strategyTable{
+  font-size: 14pt;
+
+}
+.albumArt {
+  max-width: 100%;
+
+}
+
+#albumTable {
+  color: white;
 }
 #aboutBanner{
     color: #272b30;
@@ -67,6 +96,15 @@ h5{
     text-shadow: -4px, -4px, 8px, white;*/
     background-color: rgba(237, 236, 236, 0.48);
     border-radius: 4px;
+}
+
+#strategyTitle{
+    text-align: center;
+    /*text-shadow: 2px 2px 6px grey;
+    text-shadow: -4px, -4px, 8px, white;*/
+    background-color: #B8E9FF;
+    border-radius: 4px;
+    color: black;
 }
 
 .table {
